# yezik

./: CMakeLists.txt  README.md
include/yezik/: assert.h  cli.h
src/: CMakeLists.txt  assert.c  cli.c  compiler.c  compiler.h  emitter.c  emitter.h  error.c  error.h  generator.c  generator.h  lexer.c  lexer.h  main.c
src/yezik/: CMakeLists.txt  ast.c  ast.h  compiler.c  compiler.h  emitter.c  emitter.h  error.h  lexer.c  lexer.h  main.c  parser.c  parser.h  test.c  test.h  yezik.c  yezik.h  yezik_test_suite_header_generator.cmake
subprocess/: CMakeLists.txt
subprocess/include/subprocess/: subprocess.h
subprocess/tests/: CMakeLists.txt  error_test.c  exit_test.c
tests/: assert_test.c  cli_test.c  test_config.h
tests/helpers/cmake/: test_discoverer.cmake  test_setup.cmake
tests/helpers/include/helpers/: driver.h
tests/helpers/src/: driver.c
tests/unittests/: assert_test.c
